@@ -1,5 +1,7 @@
 2002-08-18  James Henstridge  <james@daa.com.au>
 
+	* pygtk.spec.in: update spec file.
+
 	* gtk/Makefile.am: same here.
 
 	* Makefile.am: install in a gtk-2.0 subdir of site-packages.
